# VectorScan

./: .gitignore  README.md  pyproject.toml
src/cli/: test_vector_db_cli.py  vector_db_cli.py
src/core/: base.py  context_manager.py  faiss_db.py
src/decorators/: decorators.py  test_decorators.py
